--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+.color-palette{
+    --licorice:#251C19;
+    --antique-white: #FDECD8;
+    --hunyadi-yellow: #EDA93E;
+    --earth-yellow: #E5BB72;
+    --coffee: #694D2E;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.full-page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.centered-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.avatar{
+    height: 300px;
+    width: 300px;
+}
+.avatar-div{
+    height: 300px;
+    width: 300px;
+}
+.right-top {
+    height: 300px;
+    width: 600px;
+    background-color: #FDECD8;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: #694D2E;
+}
+.contacts{
+    width: 900px;
+    text-align: center;
+    background-color: #EDA93E;
+    height: 60px;
+
+}
+h1{
+    font-size: 3rem;
+    font-weight: bolder;
+    font-family: 'Pacifico', cursive;
+    color: #62361b;
+}
+h2 {
+    font-size: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+@media screen and (max-width: 768px) {
+    .avatar{
+        height: 150px;
+        width: 150px;
+    }
+    .avatar-div{
+        height: 150px;
+        width: 150px;
+    }
+    .right-top{
+        height: 150px;
+    }
+    h1 {
+        font-size: 1.3rem;
+    }
+    h2 {
+        font-size: 0.5rem;
+    }
+    .contacts{
+        height: 25px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    }
 }
