--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,8 @@ h1{
     font-weight: bolder;
     font-family: 'Press Start 2P', cursive;
     color: #62361b;
+    letter-spacing: 5px;
+    line-height: 1.2;
 }
 h2 {
     font-size: 0.8rem;
@@ -93,4 +95,7 @@ h2 {
         height: 15px;
     }
 
+}
+.error-box{
+    background-color: #FDECD8;
 }
