--- a/src/App.css
+++ b/src/App.css
@@ -98,4 +98,9 @@ h2 {
 }
 .error-box{
     background-color: #FDECD8;
+    width: 840px;
+    padding: 30px;
+}
+.spacing-150 {
+    line-height: 1.5;
 }
