--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,13 @@
 a img {
     padding-left: 5px;
     height: 25px;
-    filter: brightness(120%) sepia(70%);
+    transition:transform 1s;
+    transform:scale(100%);
 }
 a img:hover {
     padding-left: 5px;
-    transform: scale(1.2);
+    transition:transform 1s;
+    transform:scale(105%);
 }
 .right-top {
     height: 300px;
