--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top:35px
 }
 
 .centered-box{
@@ -65,9 +66,28 @@ h1{
     line-height: 1.2;
 }
 h2 {
-    font-size: 0.8rem;
+    color:#694D2E;
+
+    font-size: 1.5rem;
 }
 
+h3 {    color:#694D2E;
+
+    font-size: 1rem;
+}
+h4 {    color:#694D2E;
+
+    font-size: 0.7rem;
+}
+hr{
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+p,li{
+    font-size: 0.7rem;
+}
 
 @media screen and (max-width: 768px) {
     .avatar{
@@ -75,17 +95,17 @@ h2 {
         width: 150px;
     }
     .avatar-div{
-        height: 250px;
+        height: 150px;
         width: 150px;
     }
     .right-top{
-        height: 250px;
+        height: 150px;
     }
     h1 {
         font-size: 1.3rem;
     }
     h2 {
-        font-size: 0.5rem;
+        font-size:0.9rem;
     }
     .contacts{
         height: 25px;
@@ -95,6 +115,15 @@ h2 {
     a img {
         padding-left: 5px;
         height: 15px;
+    }
+    h3 {
+        font-size: 0.6rem;
+    }
+    h4 {
+        font-size: 0.4rem;
+    }
+    p, li{
+        font-size: 0.4rem;
     }
 
 }
