--- a/src/UI/Navbar/navbar.css
+++ b/src/UI/Navbar/navbar.css
@@ -10,12 +10,13 @@
     width: 100%;
     display: flex;
     align-items: center;
-    position:sticky;
+    position:fixed;
     padding: 0.5rem 0.5rem;
     background-color: #EDA93E;
     box-shadow: 0 1px 1px 1px rgba(9, 9, 9, 0.23);
     opacity: 0.95;
     z-index: 99;
+    top:0
 }
 .navigation-menu {
     margin-left: auto;
