--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #251C19;
+    font-family: 'Press Start 2P', sans-serif;
+}
+
 .color-palette{
     --licorice:#251C19;
     --antique-white: #FDECD8;
@@ -71,7 +79,7 @@ h2 {
     font-size: 1.5rem;
 }
 
-h3 {    color:#694D2E;
+h3 {
 
     font-size: 1rem;
 }
