--- a/src/App.css
+++ b/src/App.css
@@ -35,20 +35,27 @@ body {
     justify-content: center;
     align-items:center;
 }
-.avatar{
-    height: 300px;
-    width: 300px;
-}
+
 .avatar-div{
     height: 300px;
     width: 300px;
     background-color: #FDECD8;
+    position:relative;
+    overflow: hidden;
+}
+.avatar{
+    height: 100%;
+    z-index: 1;
+}
+.avatar2{
+    height: 100%;
+    z-index: 2;
+
 }
 a img {
     padding-left: 5px;
     height: 25px;
-    transition:transform 1s;
-    transform:scale(100%);
+
 }
 a img:hover {
     padding-left: 5px;
@@ -142,4 +149,26 @@ p,li{
 }
 .spacing-150 {
     line-height: 1.5;
+}
+
+li {
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+li:nth-child(odd) {
+    animation-delay: 0.2s;
+}
+
+li:nth-child(even) {
+    animation-delay: 0.4s;
 }
