--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -5,6 +5,17 @@
 .centered-box .container .projects .project img {
   height: 200px;
   cursor: pointer;
+  animation-name: scale;
+  animation-duration: 1s;
+}
+
+@keyframes scale {
+  from {
+    transform: scale(10%);
+  }
+  to {
+    transform: scale(100%);
+  }
 }
 
 /*# sourceMappingURL=Projects.css.map */
