--- a/src/pages/myskills.css
+++ b/src/pages/myskills.css
@@ -64,3 +64,33 @@
 h3:nth-child(odd){
     color:#694D2E;
 }
+.hard-skills {
+    display: flex;
+    animation: slide-left 1s forwards;
+}
+
+@keyframes slide-left {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.other-skills {
+    animation: slide-right 1s forwards;
+}
+
+@keyframes slide-right {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
