--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,9 @@ p,li{
 }
 
 @media screen and (max-width: 768px) {
-
+    .centered-box .container .projects .project img{
+        width:300px;
+    }
     h2.section-name,h2.soft-skills{
         display: none;
     }
