--- a/src/UI/MyFooter/myfooter.css
+++ b/src/UI/MyFooter/myfooter.css
@@ -10,7 +10,9 @@
     border: 2px solid #FDECD8;
     width: 876px;
 }
-
+.my-footer .icons{
+    justify-content: flex-end;
+}
 .footer-icons {
     filter: brightness(100%) sepia(10%);
 
