--- a/src/UI/MyFooter/myfooter.css
+++ b/src/UI/MyFooter/myfooter.css
@@ -1,19 +1,10 @@
 .copyright-text {
-    font-size: smaller;
     display: inline-block;
-    margin-left: 20px;
     color: #FDECD8;
 }
+
 .my-footer{
     display: flex;
-    padding: 10px;
+    padding: 10px 0;
     border: 2px solid #FDECD8;
-    width: 876px;
-}
-.my-footer .icons{
-    justify-content: flex-end;
-}
-.footer-icons {
-    filter: brightness(100%) sepia(10%);
-
 }
